# python-colormath

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml  test_requirements.txt
.github/workflows/: continuous-integration.yml
colormath/: chromatic_adaptation.py  color_appearance_models.py  color_constants.py  color_conversions.py  color_diff.py  color_diff_matrix.py  color_exceptions.py  color_objects.py  density.py  density_standards.py  spectral_constants.py
